--- a/package.json
+++ b/package.json
@@ -7,8 +7,17 @@
     "build": "vue-cli-service build"
   },
   "dependencies": {
+    "@mdi/font": "^5.3.45",
+    "axios": "^0.19.2",
     "core-js": "^3.6.4",
-    "vue": "^2.6.11"
+    "font": "0.0.4",
+    "mdi": "^2.2.43",
+    "moment": "^2.24.0",
+    "router": "^1.3.5",
+    "vue": "^2.6.11",
+    "vue-material-design-icons": "^4.6.0",
+    "vue-router": "^3.1.6",
+    "vuetify": "^2.2.28"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.2.0",
